--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </h2>
                 </div>
                 <div class="column">
-                    <h1>SNAKE</h1>
+                    <a href="game.html"><h1>SNAKE</h1></a>
                     <h2 style="font-family: monospace;"></h2>
                 </div>
         </div>
