--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <a href="werken_bij_museum.html"><h2 class="werken_bij_museum1">werken bij museum</h2></a>
             <img id="info_en_contact" src="pacman.jpg" alt="nog scrijven............................">
             <a href="info_en_contact.html"><h2 class="info_en_contact1">Info en contact</h2></a>
+            <a href="game.html" target="_blank">test</a>
         </div>
     </section>
     <div id="bottombar">
