--- a/werken_bij_museum.html
+++ b/werken_bij_museum.html
@@ -26,15 +26,23 @@
     </div>
     <section id="mainsection">
         <div id="scrollbar">
-            <div id="opacity"></div>
+            <div class="column3"></div>
                 <div class="column">
+                    <h1>DONEER GELD!!</h1>
                     <h2 style="font-family: monospace;">
+                        Het museum wordt continu aangevuld met waardevolle stukken door de vele donateurs die de stichting kent. <br>
+                        Sommige objecten zijn echter door de waarde of schaarste minder makkelijk te verkrijgen voor een non-profit organsatie of donatie, daarom doen we een beroep op de community om middels een kleine donatie gezamenlijk het voor elkaar te krijgen om het museum aan te vullen met de meest gevraagde videogames.<br>
+                        Dit kan bijvoorbeeld via ons Ko-Fi account.<br>
                     </h2> 
                     </h3>
                 </div>
                 <div class="column">
-                    <h2>Tijdslots</h2>
+                    <h1>VRIJWILLIGERS WERK</h1>
                     <h2 style="font-family: monospace;">
+                        Als vrijwilliger:<br>
+                        Ons museum draait volledig op vrijwilligers. <br>
+                        Regelmatig zijn wij op zoek naar vrijwilligers die willen helpen bij projecten, voor rondleidingen of onderhoud en verkoop. <br>
+                        Als je het knutselen aan oude spelsystemen helemaal te gek vindt, of met de mouwen opgestroopt elke gast een te gekke ervaring wil bieden, kan je jezelf aanmelden als vrijwilliger.<br>
                     </h2>
                 </div>
         </div>
@@ -43,7 +51,7 @@
             <a href="index.html"><h2 class="home1">home</h2></a>
             <img id="tickets"src="space.jpg" alt="nog scrijven............................">
             <a href="tickets.html"><h2 class="tickets1">tickets</h2></a>
-            <img id="gameplay"src="mario.png" alt="nog scrijven............................">
+            <img id="gameplay"src="UR4aLf.jpg" alt="nog scrijven............................">
             <a href="gameplay.html"><h2 class="gameplay1">gameplay</h2></a>
             <img id="feestjes_en_evenementen" src="Sonic-Mania-Green-Hill-Zone-Screenshot-282484812.jpg" alt="nog scrijven............................">
             <a href="feestjes_en_evenementen.html"><h2 class="feestjes_en_evenementen1">feestjes en evenementen</h2></a>
@@ -53,24 +61,7 @@
             <a href="info_en_contact.html"><h2 class="info_en_contact1">Info en contact</h2></a>
         </div>
     </section>
-    <div id="bottombar">
-        <div class="column4">
-        <h1>geschiedenis</h1>
-        <h2>Een garagebox in Den Haag is de plek waar het avontuur in 2008  begon, met twee vrienden Hasan Tasdemir en Pascal Rappailles.<br>
 
-            De garagebox werd al snel te klein waarna ze uitweken naar een loods op een industrieterrein.<br>
-
-            Helaas was de loods niet verwarmd en moest midden in de winter alles worden overgebracht naar een leegstaand Ministerie van Landbouw.<br>
-
-            Toen ook dit pand leeggeruimd moest worden, werd de toenmalige collectie van 10 arcade videogames met wat reserveonderdelen opgeslagen in een oude showroom voor klassieke auto’s.<br>
-        
-            Omdat daar geen ruimte was om de kasten te renoveren of te bespelen werd uitgekeken naar passende ruimte.<br>
-
-            Die werd in 2011 gevonden aan de Cobaltstraat in Zoetermeer.<br>
-
-            Daar besloot Hasan om met 4 vrienden de locatie te huren en kon het avontuur groeien tot een eigen ontmoetingsplek om hun hobby uit te oefenen en lekker te ontspannen met een game.<br>
-        </h2>
-        </div>
     </div>
 </body>
 </html>
